[gd_scene load_steps=5 format=3 uid="uid://y67v8bmwqsx5"]

[ext_resource type="Script" uid="uid://cyekjbhftntme" path="res://destruction/rb_tank_shot.gd" id="1_fprv4"]
[ext_resource type="Material" uid="uid://crp7pjoe06fu8" path="res://materials/lw_blue1.tres" id="2_fprv4"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yt1kc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hbysm"]
radius = 0.75
height = 6.01883

[node name="RBTankShot" type="RigidBody3D"]
collision_layer = 0
collision_mask = 65
mass = 0.4
gravity_scale = 0.0
script = ExtResource("1_fprv4")

[node name="ShotMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, -2.62268e-08, -0.3, 0, 0.6, -1.31134e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_yt1kc")
surface_material_override/0 = ExtResource("2_fprv4")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="MuzzleTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="HitShape" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0)
shape = SubResource("CapsuleShape3D_hbysm")

[node name="ImpactRay" type="RayCast3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, -0.485)
collision_mask = 65
hit_from_inside = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MuzzleTimer" to="." method="_on_muzzle_timer_timeout"]
